--- a/about.html
+++ b/about.html
@@ -53,8 +53,6 @@
                 href="./about.html"
                 class="flex items-center gap-1 nav-link hover:text-yellow-400">
                 Services
-                <span
-                  class="font-bold group-hover:content-['-'] content-['+']"></span>
               </a>
               <ul
                 class="absolute top-full left-0 w-52 bg-white text-black shadow-lg opacity-0 group-hover:opacity-100 invisible group-hover:visible transition-all duration-600 translate-y-2 group-hover:translate-y-0 z-[999]">
@@ -270,122 +268,102 @@
       </section>
     </main>
 
-    <!-- Footer -->
-    <footer
-      class="relative bg-gradient-to-b from-[#e8f0fc] to-white pt-16 pb-8 px-6 sm:px-12 overflow-hidden">
-      <div
-        class="absolute inset-0 z-0 bg-no-repeat bg-cover opacity-[0.3] pointer-events-none"
-        style="background-image: url('./assests/map.png')"></div>
+    <footer class="relative bg-gradient-to-b from-[#e8f0fc] to-white pt-16 pb-8 px-6 sm:px-12 overflow-hidden">
+    <div class="absolute inset-0 z-0 bg-no-repeat bg-cover opacity-[0.3] pointer-events-none"
+      style="background-image: url('./assests/map.png')"></div>
 
-      <div
-        class="relative z-10 max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-10">
-        <div>
-          <div class="flex items-center gap-2 mb-4">
-            <img src="./assests/logo.png" alt="Logo" class="w-[3rem]" />
-            <h2 class="text-xl font-bold text-[#940fde]">
-              DIGITRIX <span class="text-[#ffc107]">TECH</span>
-            </h2>
-          </div>
-          <p class="text-sm text-gray-600">
-            Digitrix Tech: Empowering your digital presence. Expert digital
-            marketing, captivating graphic design, and cutting-edge web and app
-            development solutions.
-          </p>
-          <div class="flex gap-3 mt-5">
-            <a
-              href="#"
-              class="bg-white shadow w-9 h-9 rounded-full text-gray-600 hover:text-blue-500 flex items-center justify-center"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a
-              href="#"
-              class="bg-white shadow w-9 h-9 rounded-full text-gray-600 hover:text-blue-400 flex items-center justify-center"
-              ><i class="fab fa-twitter"></i
-            ></a>
-            <a
-              href="#"
-              class="bg-white shadow w-9 h-9 rounded-full text-gray-600 hover:text-pink-500 flex items-center justify-center"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a
-              href="#"
-              class="bg-white shadow w-9 h-9 rounded-full text-gray-600 hover:text-blue-700 flex items-center justify-center"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
-          </div>
+    <div class="relative z-10 max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-10">
+      <div>
+        <div class="flex items-center gap-2 mb-4">
+          <img src="./assests/logo.png" alt="Logo" class="w-[3rem]" />
+          <h2 class="text-xl font-bold text-[#940fde]">
+            DIGITRIX <span class="text-[#ffc107]">TECH</span>
+          </h2>
         </div>
-
-        <!-- IT Services -->
-        <div>
-          <h3 class="text-lg font-semibold mb-4">IT Services</h3>
-          <ul class="space-y-2 text-sm text-gray-700">
-            <li><a href="#">Website Development</a></li>
-            <li><a href="#">Mobile App Development</a></li>
-            <li><a href="#">Digital Marketing Strategies</a></li>
-            <li><a href="#">Graphic Designing</a></li>
-          </ul>
-        </div>
-
-        <!-- Contact Info -->
-        <div>
-          <h3 class="text-lg font-semibold mb-4">Contact Info</h3>
-          <ul class="space-y-3 text-sm text-gray-700">
-            <li class="flex items-center gap-2">
-              <span><i class="fas fa-phone-alt hover:text-red-400"></i></span>
-              (+92) 343 222913
-            </li>
-            <li class="flex items-center gap-2">
-              <span><i class="fas fa-envelope hover:text-[#940fde]"></i></span>
-              support@digitrixtech.com
-            </li>
-            <li class="flex items-center gap-2">
-              <span><i class="fas fa-clock hover:text-[#ffc107]"></i></span>
-              Opening Hours: 10:00 - 6:00
-            </li>
-          </ul>
-        </div>
-
-        <!-- Newsletter -->
-        <div>
-          <h3 class="text-lg font-semibold mb-4">Newsletter</h3>
-          <p class="text-sm text-gray-600 mb-4">
-            Discover What's Trending: Get Engaging News Straight to Your Inbox.
-          </p>
-          <form class="relative">
-            <input
-              type="email"
-              placeholder="Your email address"
-              class="w-full rounded-full py-2 px-4 pr-12 text-sm border border-gray-300 focus:outline-none" />
-            <button
-              type="submit"
-              class="absolute right-[0.9px] bottom-[0.9px] bg-[#ffc107] hover:bg-[#e6b700] text-white w-9 h-9 rounded-full transition duration-600">
-              <i class="fas fa-paper-plane"></i>
-            </button>
-          </form>
+        <p class="text-sm text-gray-600">
+          Digitrix Tech: Empowering your digital presence. Expert digital
+          marketing, captivating graphic design, and cutting-edge web and app
+          development solutions.
+        </p>
+        <div class="flex gap-3 mt-5">
+          <a href="#"
+            class="bg-white shadow w-9 h-9 rounded-full text-gray-600 hover:text-blue-500 flex items-center justify-center"><i
+              class="fab fa-facebook-f"></i></a>
+          <a href="#"
+            class="bg-white shadow w-9 h-9 rounded-full text-gray-600 hover:text-blue-400 flex items-center justify-center"><i
+              class="fab fa-twitter"></i></a>
+          <a href="#"
+            class="bg-white shadow w-9 h-9 rounded-full text-gray-600 hover:text-pink-500 flex items-center justify-center"><i
+              class="fab fa-instagram"></i></a>
+          <a href="#"
+            class="bg-white shadow w-9 h-9 rounded-full text-gray-600 hover:text-blue-700 flex items-center justify-center"><i
+              class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
 
-      <!-- Footer Bottom -->
-      <div class="relative z-10 mt-12 text-center text-sm text-gray-600">
-        © 2025 All Rights Reserved. Developed By
-        <span class="text-[#940fde] font-medium">DigitrixTech</span>
+      <!-- IT Services -->
+      <div>
+        <h3 class="text-lg font-semibold mb-4">IT Services</h3>
+        <ul class="space-y-2 text-sm text-gray-700">
+          <li><a href="./web-development.html">Website Development</a></li>
+          <li><a href="./app-development.html">Mobile App Development</a></li>
+          <li><a href="./marketing.html">Digital Marketing</a></li>
+          <li><a href="./branding-logo.html">Graphic Designing</a></li>
+          <li><a href="./seo-optimization.html">SEO Optimization</a></li>
+        </ul>
       </div>
-      <!-- Back to Top Button -->
 
-      <button
-        id="backToTop"
-        onclick="scrollToTop()"
-        class="hidden fixed bottom-4 right-4 z-50 font-bold text-white w-10 h-10 rounded-full shadow-lg flex items-center justify-center transition duration-300 overflow-hidden">
-        <i class="fas fa-chevron-up z-10"></i>
-        <div id="fill" class="absolute inset-0 rounded-full z-0"></div>
-      </button>
-    </footer>
+      <!-- Contact Info -->
+      <div>
+        <h3 class="text-lg font-semibold mb-4">Contact Info</h3>
+        <ul class="space-y-3 text-sm text-gray-700">
+          <li class="flex items-center gap-2">
+            <span><i class="fas fa-phone-alt hover:text-red-400"></i></span>
+            (+92) 343 222913
+          </li>
+          <li class="flex items-center gap-2">
+            <span><i class="fas fa-envelope hover:text-[#940fde]"></i></span>
+            support@digitrixtech.com
+          </li>
+          <li class="flex items-center gap-2">
+            <span><i class="fas fa-clock hover:text-[#ffc107]"></i></span>
+            Opening Hours: 10:00 - 6:00
+          </li>
+        </ul>
+      </div>
 
-    <!-- Scripts -->
-    <script
-      src="https://kit.fontawesome.com/831f7084ef.js"
-      crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="script.js"></script>
+      <!-- Newsletter -->
+      <div>
+        <h3 class="text-lg font-semibold mb-4">Newsletter</h3>
+        <p class="text-sm text-gray-600 mb-4">
+          Discover What's Trending: Get Engaging News Straight to Your Inbox.
+        </p>
+        <form class="relative">
+          <input type="email" placeholder="Your email address"
+            class="w-full rounded-full py-2 px-4 pr-12 text-sm border border-gray-300 focus:outline-none" />
+          <button type="submit"
+            class="absolute right-[0.9px] bottom-[0.9px] bg-[#ffc107] hover:bg-[#e6b700] text-white w-9 h-9 rounded-full transition duration-600">
+            <i class="fas fa-paper-plane"></i>
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Footer Bottom -->
+    <div class="relative z-10 mt-12 text-center text-sm text-gray-600">
+      © 2025 All Rights Reserved. Developed By
+      <span class="text-[#940fde] font-medium">DigitrixTech</span>
+    </div>
+    <!-- Back to Top Button -->
+    <button id="backToTop" onclick="scrollToTop()"
+      class="hidden fixed bottom-4 right-4 z-50 font-bold text-white w-10 h-10 rounded-full shadow-lg flex items-center justify-center transition duration-300 overflow-hidden">
+      <i class="fas fa-chevron-up z-10"></i>
+      <div id="fill" class="absolute inset-0 rounded-full z-0"></div>
+    </button>
+  </footer>
+
+  <script src="https://kit.fontawesome.com/831f7084ef.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="script.js"></script>
   </body>
 </html>
