--- a/branding-logo.html
+++ b/branding-logo.html
@@ -3,31 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Development - Digitrix Tech</title>
+    <title>Branding & Logo - Digitrix Tech</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link
       href="https://fonts.googleapis.com/css2?family=Livvic:wght@400;600;700&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
-    <!-- Font Awesome for icons -->
-
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       body {
         font-family: "Livvic", sans-serif;
       }
-      #fill {
-        background: linear-gradient(to top, #940fde 0%, #ffc107 0%);
-        transition: background 0.3s ease;
-      }
     </style>
   </head>
-  <body class="bg-white text-gray-800">
-   <!-- Navbar -->
+<body class="bg-white text-gray-800">
+     <!-- Navbar -->
     <header
       id="navbar"
       class="fixed top-0 w-full z-50 transition-all duration-600 text-white px-[5%] py-4">
@@ -122,206 +114,157 @@
         </nav>
       </div>
     </header>
-    <section class="relative bg-black text-white pt-20 pb-[3rem] px-2 md:px-16">
-      <!-- Decorative Left Layer -->
-      <div
-        class="absolute top-0 left-0 w-full h-full bg-[url('./assests/pattern.png')] bg-cover opacity-25"></div>
 
-      <div class="relative z-10 flex flex-col items-center text-center">
-        <h1 class="text-4xl md:text-5xl font-extrabold text-white mb-4">
-          Web Development
+<!-- Hero Section -->
+    <section class="relative bg-black text-white pt-20 pb-16 px-4 md:px-16">
+      <div
+        class="absolute inset-0 bg-[url('./assests/pattern.png')] bg-cover opacity-20"
+      ></div>
+      <div class="relative z-10 text-center">
+        <h1 class="text-4xl md:text-5xl font-extrabold mb-4">
+          Branding & Logo
         </h1>
         <nav class="text-gray-300 text-sm space-x-2">
           <a href="index.html" class="hover:text-[#ffc107]">Home</a>
           <span>/</span>
           <span>Services</span>
           <span>/</span>
-          <span class="text-[#ffc107]">Web Development</span>
+          <span class="text-[#ffc107]">Branding & Logo</span>
         </nav>
       </div>
     </section>
 
-    <!-- Introduction -->
+    <!-- About Branding -->
     <section class="max-w-6xl mx-auto py-16 px-6">
-      <h2
-        data-aos="fade-right"
-        class="text-4xl font-semibold text-[#940fde] mb-6">
-        About Our Web Development Services
+      <h2 data-aos="fade-right" class="text-4xl font-semibold text-[#940fde] mb-6">
+        Build a Memorable Brand Identity That Lasts
       </h2>
       <p data-aos="fade-up" class="text-lg text-gray-700 mb-10">
-        At <strong class="font-semibold text-[#ffc107]">Digitrix Tech</strong>,
-        we create tailor-made, responsive, and SEO-optimized websites for
-        businesses of every size. With
-        <strong class="font-semibold text-[#ffc107]"
-          >6+ years of experience</strong
-        >
-        and over
-        <strong class="font-semibold text-[#ffc107]">120+ projects</strong>
-        delivered, our developers turn your digital vision into dynamic, secure,
-        and scalable online platforms.
+        At <strong class="text-[#ffc107] font-semibold">Digitrix Tech</strong>, we help brands leave lasting impressions with professional, modern, and strategic visual branding. From your logo to your entire brand system, we design identities that reflect your values and connect with your audience.
       </p>
     </section>
 
     <!-- Services Offered -->
     <section class="max-w-7xl mx-auto grid md:grid-cols-3 gap-8 py-12 px-6">
-      <div
-        data-aos="fade-up"
-        class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
+      <div data-aos="fade-up" class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
         <div class="text-5xl text-[#ffc107] mb-4">
-          <i class="fas fa-code"></i>
+          <i class="fas fa-lightbulb"></i>
         </div>
-        <h3 class="text-xl font-semibold mb-2 text-[#940fde]">
-          Custom Web Development
-        </h3>
-        <p class="text-gray-600 text-sm">
-          Unique websites designed to meet your specific business needs, built
-          from scratch with precision coding.
+        <h3 class="text-xl font-semibold text-[#940fde] mb-2">Brand Strategy</h3>
+        <p class="text-sm text-gray-600">
+          We define your brand’s voice, personality, positioning, and audience to shape consistent messaging.
         </p>
       </div>
-      <div
-        data-aos="fade-up"
-        data-aos-delay="100"
-        class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
+      <div data-aos="fade-up" data-aos-delay="100" class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
         <div class="text-5xl text-[#ffc107] mb-4">
-          <i class="fas fa-layer-group"></i>
+          <i class="fas fa-pen-nib"></i>
         </div>
-        <h3 class="text-xl font-semibold mb-2 text-[#940fde]">
-          Full-Stack Web Applications
-        </h3>
-        <p class="text-gray-600 text-sm">
-          Dynamic and scalable web applications with modern frameworks and
-          robust backend technologies.
+        <h3 class="text-xl font-semibold text-[#940fde] mb-2">Custom Logo Design</h3>
+        <p class="text-sm text-gray-600">
+          Unique, scalable logos tailored to your business identity—simple, memorable, and meaningful.
         </p>
       </div>
-      <div
-        data-aos="fade-up"
-        data-aos-delay="200"
-        class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
+      <div data-aos="fade-up" data-aos-delay="200" class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
         <div class="text-5xl text-[#ffc107] mb-4">
-          <i class="fas fa-shopping-cart"></i>
+          <i class="fas fa-palette"></i>
         </div>
-        <h3 class="text-xl font-semibold mb-2 text-[#940fde]">
-          E-Commerce Development
-        </h3>
-        <p class="text-gray-600 text-sm">
-          Complete eCommerce solutions with integrated payment systems and
-          inventory management.
+        <h3 class="text-xl font-semibold text-[#940fde] mb-2">Color & Typography</h3>
+        <p class="text-sm text-gray-600">
+          Strategic selection of brand colors, fonts, and styles for a consistent and appealing brand experience.
         </p>
       </div>
-      <div
-        data-aos="fade-up"
-        data-aos-delay="300"
-        class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
+      <div data-aos="fade-up" data-aos-delay="300" class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
         <div class="text-5xl text-[#ffc107] mb-4">
-          <i class="fas fa-globe"></i>
+          <i class="fas fa-shapes"></i>
         </div>
-        <h3 class="text-xl font-semibold mb-2 text-[#940fde]">
-          Corporate & Portfolio Websites
-        </h3>
-        <p class="text-gray-600 text-sm">
-          Elegant business and personal portfolio sites to showcase services,
-          team, and projects online.
+        <h3 class="text-xl font-semibold text-[#940fde] mb-2">Brand Identity Kit</h3>
+        <p class="text-sm text-gray-600">
+          A full visual system—logo, typography, iconography, and brand guidelines to keep everything aligned.
         </p>
       </div>
-      <div
-        data-aos="fade-up"
-        data-aos-delay="400"
-        class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
+      <div data-aos="fade-up" data-aos-delay="400" class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
         <div class="text-5xl text-[#ffc107] mb-4">
-          <i class="fab fa-figma"></i>
+          <i class="fas fa-bullhorn"></i>
         </div>
-        <h3 class="text-xl font-semibold mb-2 text-[#940fde]">
-          Figma UI/UX Design
-        </h3>
-        <p class="text-gray-600 text-sm">
-          Interactive, modern, and user-friendly UI/UX designs created with
-          Figma before development.
+        <h3 class="text-xl font-semibold text-[#940fde] mb-2">Brand Collateral</h3>
+        <p class="text-sm text-gray-600">
+          Designs for business cards, letterheads, social banners, email templates, and more—all brand-aligned.
         </p>
       </div>
-      <div
-        data-aos="fade-up"
-        data-aos-delay="500"
-        class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
+      <div data-aos="fade-up" data-aos-delay="500" class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
         <div class="text-5xl text-[#ffc107] mb-4">
-          <i class="fas fa-sync"></i>
+          <i class="fas fa-sync-alt"></i>
         </div>
-        <h3 class="text-xl font-semibold mb-2 text-[#940fde]">
-          Website Redesign & Maintenance
-        </h3>
-        <p class="text-gray-600 text-sm">
-          Revamp and maintain your existing website for modern functionality,
-          security, and style.
+        <h3 class="text-xl font-semibold text-[#940fde] mb-2">Rebranding</h3>
+        <p class="text-sm text-gray-600">
+          Transform your outdated brand with a modern refresh—updated visuals, tone, and messaging for today’s market.
         </p>
       </div>
     </section>
 
-    <!-- Tech Stack -->
+    <!-- Tools -->
     <section class="bg-gray-50 py-16 px-6">
-      <h2
-        data-aos="fade-down"
-        class="text-4xl font-bold text-center text-[#940fde] mb-10">
-        Technologies We Specialize In
+      <h2 data-aos="fade-down" class="text-4xl font-semibold text-center text-[#940fde] mb-10">
+        Tools We Use for Branding
       </h2>
-      <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+      <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto text-center">
         <div data-aos="fade-up">
-          <h3 class="text-xl font-semibold mb-2">Front-End</h3>
-          <p class="text-gray-600">
-            HTML5, CSS3, Tailwind, React, Next.js, Vue
-          </p>
+          <h3 class="text-xl font-semibold mb-2">Design & Illustration</h3>
+          <p class="text-gray-600">Adobe Illustrator, Adobe Photoshop, Canva</p>
         </div>
         <div data-aos="fade-up" data-aos-delay="100">
-          <h3 class="text-xl font-semibold mb-2">Back-End</h3>
-          <p class="text-gray-600">Node.js, Express, MongoDB, MySQL</p>
+          <h3 class="text-xl font-semibold mb-2">UI/UX Tools</h3>
+          <p class="text-gray-600">Figma, Adobe XD, Sketch</p>
         </div>
         <div data-aos="fade-up" data-aos-delay="200">
-          <h3 class="text-xl font-semibold mb-2">UI/UX Design</h3>
-          <p class="text-gray-600">Figma, Adobe XD, Webflow, Canva</p>
+          <h3 class="text-xl font-semibold mb-2">Prototyping & Branding Kits</h3>
+          <p class="text-gray-600">Brandfolder, Webflow, CorelDRAW</p>
         </div>
       </div>
     </section>
-    <!-- Benefits -->
+
+    <!-- Why Us -->
     <section class="max-w-6xl mx-auto py-16 px-6">
-      <h2 data-aos="fade-right" class="text-4xl font-bold text-[#940fde] mb-8">
-        What Makes Us Stand Out
+      <h2 data-aos="fade-right" class="text-4xl font-semibold text-[#940fde] mb-8">
+        Why Choose Digitrix for Branding?
       </h2>
       <ul class="space-y-5 text-lg text-gray-700">
         <li data-aos="fade-up">
-          <i class="fas fa-check-circle text-[#ffc107] mr-2"></i>SEO Optimized &
-          Mobile-Responsive Websites
+          <i class="fas fa-check-circle text-[#ffc107] mr-2"></i>Creative &
+          Unique Branding Concepts
         </li>
         <li data-aos="fade-up" data-aos-delay="100">
-          <i class="fas fa-check-circle text-[#ffc107] mr-2"></i>Clean Code &
-          Latest Standards
+          <i class="fas fa-check-circle text-[#ffc107] mr-2"></i>Tailored Logo &
+          Identity Kits
         </li>
         <li data-aos="fade-up" data-aos-delay="200">
-          <i class="fas fa-check-circle text-[#ffc107] mr-2"></i>Ongoing
-          Maintenance & Support
+          <i class="fas fa-check-circle text-[#ffc107] mr-2"></i>Quick
+          Turnaround & Revisions
         </li>
         <li data-aos="fade-up" data-aos-delay="300">
-          <i class="fas fa-check-circle text-[#ffc107] mr-2"></i>Speed-Optimized
-          for High Performance
+          <i class="fas fa-check-circle text-[#ffc107] mr-2"></i>Designs That
+          Work Across All Mediums
         </li>
       </ul>
     </section>
 
     <!-- Stats -->
-    <section
-      class="bg-gradient-to-r from-[#940fde] to-[#ffc107] text-white py-16 px-6 text-center">
+    <section class="bg-gradient-to-r from-[#940fde] to-[#ffc107] text-white py-16 px-6 text-center">
       <h2 data-aos="fade-up" class="text-3xl font-bold mb-10">
-        Digitrix Web Stats
+        Branding That Leaves a Mark
       </h2>
       <div class="grid md:grid-cols-3 gap-10 max-w-6xl mx-auto">
         <div data-aos="fade-up">
-          <h3 class="text-5xl font-bold mb-2">6+</h3>
-          <p>Years of Experience</p>
+          <h3 class="text-5xl font-bold mb-2">150+</h3>
+          <p>Logos Designed</p>
         </div>
         <div data-aos="fade-up" data-aos-delay="150">
-          <h3 class="text-5xl font-bold mb-2">120+</h3>
-          <p>Websites Delivered</p>
-        </div>
-        <div data-aos="fade-up" data-aos-delay="300">
           <h3 class="text-5xl font-bold mb-2">100%</h3>
           <p>Client Satisfaction</p>
+        </div>
+        <div data-aos="fade-up" data-aos-delay="300">
+          <h3 class="text-5xl font-bold mb-2">70%</h3>
+          <p>Clients Rebranded Successfully</p>
         </div>
       </div>
     </section>
@@ -329,19 +272,18 @@
     <!-- CTA -->
     <section class="text-center py-16">
       <h2 data-aos="zoom-in" class="text-3xl font-bold text-[#940fde] mb-4">
-        Let's Launch Your Website Together
+        Ready to Make Your Brand Unforgettable?
       </h2>
       <p data-aos="fade-up" class="text-gray-600 max-w-2xl mx-auto mb-8">
-        We’re ready to take your digital idea and turn it into something real.
-        Let’s connect and bring your dream project online — fast, smart, and
-        affordable.
+        Let's work together to build a brand identity that stands out, connects deeply, and grows with your business.
       </p>
       <a
         href="contact.html"
         class="inline-block px-8 py-3 bg-gradient-to-r from-[#940fde] to-[#ffc107] text-white font-semibold rounded-full shadow hover:opacity-90 transition duration-300"
         data-aos="fade-up"
-        >Start Now</a
       >
+        Start Branding
+      </a>
     </section>
 
     <footer class="relative bg-gradient-to-b from-[#e8f0fc] to-white pt-16 pb-8 px-6 sm:px-12 overflow-hidden">
@@ -440,6 +382,7 @@
 
   <script src="https://kit.fontawesome.com/831f7084ef.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="script.js"></script>
-  </body>
+</body>
 </html>
