--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hero Section Tailwind</title>
+  <title>DigitrixTech</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -87,14 +87,7 @@
         transition: background 0.3s ease;
       }
 
-      .dots {
-        position: absolute;
-        width: 13rem;
-        height: 10px;
-        background-image: radial-gradient(#ffc107 20%, transparent 20%);
-        background-size: 18px 18px;
-        z-index: 2;
-      }
+    
 
       body {
         font-family: "Livvic", sans-serif;
@@ -132,8 +125,6 @@
                 href="./about.html"
                 class="flex items-center gap-1 nav-link hover:text-yellow-400">
                 Services
-                <span
-                  class="font-bold group-hover:content-['-'] content-['+']"></span>
               </a>
               <ul
                 class="absolute top-full left-0 w-52 bg-white text-black shadow-lg opacity-0 group-hover:opacity-100 invisible group-hover:visible transition-all duration-600 translate-y-2 group-hover:translate-y-0 z-[999]">
@@ -317,6 +308,17 @@
           </p>
         </div>
         <!-- Card 6 -->
+        <div data-aos="fade-up" data-aos-delay="500"
+          class="text-center p-6 bg-white shadow rounded-lg transition duration-600 ease-in-out hover:shadow-xl hover:-translate-y-1">
+          <img src="/assests/designing.png" alt="Data Security" class="h-16 mx-auto mb-4" />
+          <h3 class="text-xl font-semibold text-[#940fde] mb-2">
+            Graphic Designing
+          </h3>
+          <p class="text-gray-600">
+            Creative designs that communicate your brand's message.
+          </p>
+        </div>
+        <!-- Card 7 - Coming Soon -->
         <div data-aos="fade-up" data-aos-delay="600"
           class="relative text-center p-6 bg-white shadow rounded-lg transition duration-600 ease-in-out hover:shadow-xl hover:-translate-y-1">
 
@@ -334,6 +336,7 @@
         </div>
 
       </div>
+
   </section>
 
   <section class="w-full bg-white py-20 px-4 md:px-0">
