--- a/graphic-design.html
+++ b/graphic-design.html
@@ -353,22 +353,30 @@
           </p>
           <div class="flex gap-3 mt-5">
             <a
-              href="#"
-              class="bg-white shadow w-9 h-9 rounded-full text-gray-600 hover:text-blue-500 flex items-center justify-center"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
+              href="https://www.facebook.com/digitrixtech"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="bg-white shadow w-9 h-9 rounded-full text-gray-600 hover:text-blue-500 flex items-center justify-center">
+              <i class="fab fa-facebook-f"></i>
+            </a>
             <a
-              href="#"
+              href="https://x.com/DigitrixTechs?t=3sBtyfdeeLexZAaBwT8HxQ&s=09"
+              target="_blank"
+              rel="noopener noreferrer"
               class="bg-white shadow w-9 h-9 rounded-full text-gray-600 hover:text-blue-400 flex items-center justify-center"
               ><i class="fab fa-twitter"></i
             ></a>
             <a
-              href="#"
+              href="https://www.instagram.com/digitrixtechs"
+              target="_blank"
+              rel="noopener noreferrer"
               class="bg-white shadow w-9 h-9 rounded-full text-gray-600 hover:text-pink-500 flex items-center justify-center"
               ><i class="fab fa-instagram"></i
             ></a>
             <a
-              href="#"
+              href="https://www.linkedin.com/in/naveed-ahmed-700198356/"
+              target="_blank"
+              rel="noopener noreferrer"
               class="bg-white shadow w-9 h-9 rounded-full text-gray-600 hover:text-blue-700 flex items-center justify-center"
               ><i class="fab fa-linkedin-in"></i
             ></a>
@@ -380,10 +388,18 @@
           <h3 class="text-lg font-semibold mb-4">IT Services</h3>
           <ul class="space-y-2 text-sm text-gray-700">
             <li><a href="./web-development.html">Website Development</a></li>
-            <li><a href="./app-development.html">Mobile App Development</a></li>
-            <li><a href="./marketing.html">Digital Marketing</a></li>
-            <li><a href="./branding-logo.html">Graphic Designing</a></li>
+            <li><a href="./app-development.html">App Development</a></li>
+            <li class="flex items-center gap-2">
+              UI/UX Designing
+              <span
+                class="text-xs bg-yellow-400 text-black px-2 py-0.5 rounded-full"
+                >Coming Soon</span
+              >
+            </li>
             <li><a href="./seo-optimization.html">SEO Optimization</a></li>
+            <li><a href="./branding-logo.html">Branding & Logo</a></li>
+            <li><a href="./graphic-design.html">Graphic Design</a></li>
+            <li><a href="./marketing.html">Marketing</a></li>
           </ul>
         </div>
 
@@ -412,11 +428,17 @@
           <p class="text-sm text-gray-600 mb-4">
             Discover What's Trending: Get Engaging News Straight to Your Inbox.
           </p>
-          <form class="relative">
+          <form
+            action="https://formspree.io/f/xvgqqgzk"
+            method="POST"
+            class="relative">
             <input
               type="email"
+              name="email"
+              required
               placeholder="Your email address"
               class="w-full rounded-full py-2 px-4 pr-12 text-sm border border-gray-300 focus:outline-none" />
+
             <button
               type="submit"
               class="absolute right-[0.9px] bottom-[0.9px] bg-[#ffc107] hover:bg-[#e6b700] text-white w-9 h-9 rounded-full transition duration-600">
@@ -440,6 +462,7 @@
         <div id="fill" class="absolute inset-0 rounded-full z-0"></div>
       </button>
     </footer>
+
 
     <script
       src="https://kit.fontawesome.com/831f7084ef.js"
