--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DigitrixTech</title>
-    <link rel="icon" href="./assests/logo.png" type="image/x-icon" />
+    <link rel="icon" href="./assests/logo.png" type="image/png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -242,7 +242,7 @@
       <div
         class="relative w-[500px] h-[500px] rounded-full bg-gradient-to-r from-[#940fde] to-[#ffc107] overflow-hidden z-10 shrink-0">
         <img
-          src="./Assests/Image 2.png"
+          src="./assests/Image 2.png"
           alt="Hero Person"
           class="w-full h-full object-cover rounded-full" />
       </div>
