--- a/app-development.html
+++ b/app-development.html
@@ -13,6 +13,62 @@
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+      #loaderWrapper {
+        position: fixed;
+        inset: 0;
+        background: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+      }
+      .loader {
+        width: 65px;
+        aspect-ratio: 1;
+        position: relative;
+      }
+      .loader:before,
+      .loader:after {
+        content: "";
+        position: absolute;
+        border-radius: 50px;
+        box-shadow: 0 0 0 3px inset #ffc107;
+        animation: l5 2.5s infinite;
+      }
+      .loader:after {
+        animation-delay: -1.25s;
+        border-radius: 0;
+        box-shadow: 0 0 0 3px inset #940fde;
+      }
+      @keyframes l5 {
+        0% {
+          inset: 0 35px 35px 0;
+        }
+        12.5% {
+          inset: 0 35px 0 0;
+        }
+        25% {
+          inset: 35px 35px 0 0;
+        }
+        37.5% {
+          inset: 35px 0 0 0;
+        }
+        50% {
+          inset: 35px 0 0 35px;
+        }
+        62.5% {
+          inset: 0 0 0 35px;
+        }
+        75% {
+          inset: 0 0 35px 35px;
+        }
+        87.5% {
+          inset: 0 0 35px 0;
+        }
+        100% {
+          inset: 0 35px 35px 0;
+        }
+      }
       body {
         font-family: "Livvic", sans-serif;
       }
@@ -23,6 +79,8 @@
     </style>
   </head>
   <body class="bg-white text-gray-800">
+    <!-- Loader -->
+    <div id="loaderWrapper"><div class="loader"></div></div>
     <!-- Navbar -->
     <header
       id="navbar"
@@ -51,7 +109,6 @@
                 href="./about.html"
                 class="flex items-center gap-1 nav-link hover:text-yellow-400">
                 Services
-                
               </a>
               <ul
                 class="absolute top-full left-0 w-52 bg-white text-black shadow-lg opacity-0 group-hover:opacity-100 invisible group-hover:visible transition-all duration-600 translate-y-2 group-hover:translate-y-0 z-[999]">
@@ -146,13 +203,13 @@
         Transforming Ideas into Seamless Mobile Experiences
       </h2>
       <p data-aos="fade-up" class="text-lg text-gray-700 mb-10">
-        At <strong class="text-[#ffc107] font-semibold">Digitrix Tech</strong>, we specialize
-        in crafting high-performance, user-friendly mobile apps for both
-        <strong class="text-[#ffc107] font-semibold">iOS</strong> and
-        <strong class="text-[#ffc107] font-semibold">Android</strong> platforms. With a team
-        of skilled developers and UI/UX experts, we help startups, SMEs, and
-        enterprises bring their vision to life with intuitive, scalable, and
-        secure applications.
+        At <strong class="text-[#ffc107] font-semibold">Digitrix Tech</strong>,
+        we specialize in crafting high-performance, user-friendly mobile apps
+        for both <strong class="text-[#ffc107] font-semibold">iOS</strong> and
+        <strong class="text-[#ffc107] font-semibold">Android</strong> platforms.
+        With a team of skilled developers and UI/UX experts, we help startups,
+        SMEs, and enterprises bring their vision to life with intuitive,
+        scalable, and secure applications.
       </p>
     </section>
 
@@ -274,7 +331,9 @@
 
     <!-- Benefits -->
     <section class="max-w-6xl mx-auto py-16 px-6">
-      <h2 data-aos="fade-right" class="text-4xl font-semibold text-[#940fde] mb-8">
+      <h2
+        data-aos="fade-right"
+        class="text-4xl font-semibold text-[#940fde] mb-8">
         Why Choose Us for App Development?
       </h2>
       <ul class="space-y-5 text-lg text-gray-700">
@@ -335,7 +394,7 @@
         >Let’s Get Started</a
       >
     </section>
-    
+
     <footer
       class="relative bg-gradient-to-b from-[#e8f0fc] to-white pt-16 pb-8 px-6 sm:px-12 overflow-hidden">
       <div
@@ -468,8 +527,10 @@
       </button>
     </footer>
 
-  <script src="https://kit.fontawesome.com/831f7084ef.js" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script src="script.js"></script>
+    <script
+      src="https://kit.fontawesome.com/831f7084ef.js"
+      crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
