--- a/branding-logo.html
+++ b/branding-logo.html
@@ -9,18 +9,75 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Livvic:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+       #loaderWrapper {
+        position: fixed;
+        inset: 0;
+        background: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+      }
+      .loader {
+        width: 65px;
+        aspect-ratio: 1;
+        position: relative;
+      }
+      .loader:before,
+      .loader:after {
+        content: "";
+        position: absolute;
+        border-radius: 50px;
+        box-shadow: 0 0 0 3px inset #ffc107;
+        animation: l5 2.5s infinite;
+      }
+      .loader:after {
+        animation-delay: -1.25s;
+        border-radius: 0;
+        box-shadow: 0 0 0 3px inset #940fde;
+      }
+      @keyframes l5 {
+        0% {
+          inset: 0 35px 35px 0;
+        }
+        12.5% {
+          inset: 0 35px 0 0;
+        }
+        25% {
+          inset: 35px 35px 0 0;
+        }
+        37.5% {
+          inset: 35px 0 0 0;
+        }
+        50% {
+          inset: 35px 0 0 35px;
+        }
+        62.5% {
+          inset: 0 0 0 35px;
+        }
+        75% {
+          inset: 0 0 35px 35px;
+        }
+        87.5% {
+          inset: 0 0 35px 0;
+        }
+        100% {
+          inset: 0 35px 35px 0;
+        }
+      }
       body {
         font-family: "Livvic", sans-serif;
       }
     </style>
   </head>
-<body class="bg-white text-gray-800">
-     <!-- Navbar -->
+  <body class="bg-white text-gray-800">
+    <!-- Loader -->
+    <div id="loaderWrapper"><div class="loader"></div></div>
+    <!-- Navbar -->
     <header
       id="navbar"
       class="fixed top-0 w-full z-50 transition-all duration-600 text-white px-[5%] py-4">
@@ -116,11 +173,10 @@
       </div>
     </header>
 
-<!-- Hero Section -->
+    <!-- Hero Section -->
     <section class="relative bg-black text-white pt-20 pb-16 px-4 md:px-16">
       <div
-        class="absolute inset-0 bg-[url('./assests/pattern.png')] bg-cover opacity-20"
-      ></div>
+        class="absolute inset-0 bg-[url('./assests/pattern.png')] bg-cover opacity-20"></div>
       <div class="relative z-10 text-center">
         <h1 class="text-4xl md:text-5xl font-extrabold mb-4">
           Branding & Logo
@@ -137,75 +193,116 @@
 
     <!-- About Branding -->
     <section class="max-w-6xl mx-auto py-16 px-6">
-      <h2 data-aos="fade-right" class="text-4xl font-semibold text-[#940fde] mb-6">
+      <h2
+        data-aos="fade-right"
+        class="text-4xl font-semibold text-[#940fde] mb-6">
         Build a Memorable Brand Identity That Lasts
       </h2>
       <p data-aos="fade-up" class="text-lg text-gray-700 mb-10">
-        At <strong class="text-[#ffc107] font-semibold">Digitrix Tech</strong>, we help brands leave lasting impressions with professional, modern, and strategic visual branding. From your logo to your entire brand system, we design identities that reflect your values and connect with your audience.
+        At <strong class="text-[#ffc107] font-semibold">Digitrix Tech</strong>,
+        we help brands leave lasting impressions with professional, modern, and
+        strategic visual branding. From your logo to your entire brand system,
+        we design identities that reflect your values and connect with your
+        audience.
       </p>
     </section>
 
     <!-- Services Offered -->
     <section class="max-w-7xl mx-auto grid md:grid-cols-3 gap-8 py-12 px-6">
-      <div data-aos="fade-up" class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
+      <div
+        data-aos="fade-up"
+        class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
         <div class="text-5xl text-[#ffc107] mb-4">
           <i class="fas fa-lightbulb"></i>
         </div>
-        <h3 class="text-xl font-semibold text-[#940fde] mb-2">Brand Strategy</h3>
+        <h3 class="text-xl font-semibold text-[#940fde] mb-2">
+          Brand Strategy
+        </h3>
         <p class="text-sm text-gray-600">
-          We define your brand’s voice, personality, positioning, and audience to shape consistent messaging.
+          We define your brand’s voice, personality, positioning, and audience
+          to shape consistent messaging.
         </p>
       </div>
-      <div data-aos="fade-up" data-aos-delay="100" class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
+      <div
+        data-aos="fade-up"
+        data-aos-delay="100"
+        class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
         <div class="text-5xl text-[#ffc107] mb-4">
           <i class="fas fa-pen-nib"></i>
         </div>
-        <h3 class="text-xl font-semibold text-[#940fde] mb-2">Custom Logo Design</h3>
+        <h3 class="text-xl font-semibold text-[#940fde] mb-2">
+          Custom Logo Design
+        </h3>
         <p class="text-sm text-gray-600">
-          Unique, scalable logos tailored to your business identity—simple, memorable, and meaningful.
+          Unique, scalable logos tailored to your business identity—simple,
+          memorable, and meaningful.
         </p>
       </div>
-      <div data-aos="fade-up" data-aos-delay="200" class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
+      <div
+        data-aos="fade-up"
+        data-aos-delay="200"
+        class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
         <div class="text-5xl text-[#ffc107] mb-4">
           <i class="fas fa-palette"></i>
         </div>
-        <h3 class="text-xl font-semibold text-[#940fde] mb-2">Color & Typography</h3>
+        <h3 class="text-xl font-semibold text-[#940fde] mb-2">
+          Color & Typography
+        </h3>
         <p class="text-sm text-gray-600">
-          Strategic selection of brand colors, fonts, and styles for a consistent and appealing brand experience.
+          Strategic selection of brand colors, fonts, and styles for a
+          consistent and appealing brand experience.
         </p>
       </div>
-      <div data-aos="fade-up" data-aos-delay="300" class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
+      <div
+        data-aos="fade-up"
+        data-aos-delay="300"
+        class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
         <div class="text-5xl text-[#ffc107] mb-4">
           <i class="fas fa-shapes"></i>
         </div>
-        <h3 class="text-xl font-semibold text-[#940fde] mb-2">Brand Identity Kit</h3>
+        <h3 class="text-xl font-semibold text-[#940fde] mb-2">
+          Brand Identity Kit
+        </h3>
         <p class="text-sm text-gray-600">
-          A full visual system—logo, typography, iconography, and brand guidelines to keep everything aligned.
+          A full visual system—logo, typography, iconography, and brand
+          guidelines to keep everything aligned.
         </p>
       </div>
-      <div data-aos="fade-up" data-aos-delay="400" class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
+      <div
+        data-aos="fade-up"
+        data-aos-delay="400"
+        class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
         <div class="text-5xl text-[#ffc107] mb-4">
           <i class="fas fa-bullhorn"></i>
         </div>
-        <h3 class="text-xl font-semibold text-[#940fde] mb-2">Brand Collateral</h3>
+        <h3 class="text-xl font-semibold text-[#940fde] mb-2">
+          Brand Collateral
+        </h3>
         <p class="text-sm text-gray-600">
-          Designs for business cards, letterheads, social banners, email templates, and more—all brand-aligned.
+          Designs for business cards, letterheads, social banners, email
+          templates, and more—all brand-aligned.
         </p>
       </div>
-      <div data-aos="fade-up" data-aos-delay="500" class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
+      <div
+        data-aos="fade-up"
+        data-aos-delay="500"
+        class="p-6 bg-white rounded-xl shadow hover:shadow-purple-300 transition hover:-translate-y-2">
         <div class="text-5xl text-[#ffc107] mb-4">
           <i class="fas fa-sync-alt"></i>
         </div>
         <h3 class="text-xl font-semibold text-[#940fde] mb-2">Rebranding</h3>
         <p class="text-sm text-gray-600">
-          Transform your outdated brand with a modern refresh—updated visuals, tone, and messaging for today’s market.
+          Transform your outdated brand with a modern refresh—updated visuals,
+          tone, and messaging for today’s market.
         </p>
       </div>
     </section>
 
     <!-- Tools -->
     <section class="bg-gray-50 py-16 px-6">
-      <h2 data-aos="fade-down" class="text-4xl font-semibold text-center text-[#940fde] mb-10">
+      <h2
+        data-aos="fade-down"
+        class="text-4xl font-semibold text-center text-[#940fde] mb-10">
         Tools We Use for Branding
       </h2>
       <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto text-center">
@@ -218,7 +315,9 @@
           <p class="text-gray-600">Figma, Adobe XD, Sketch</p>
         </div>
         <div data-aos="fade-up" data-aos-delay="200">
-          <h3 class="text-xl font-semibold mb-2">Prototyping & Branding Kits</h3>
+          <h3 class="text-xl font-semibold mb-2">
+            Prototyping & Branding Kits
+          </h3>
           <p class="text-gray-600">Brandfolder, Webflow, CorelDRAW</p>
         </div>
       </div>
@@ -226,7 +325,9 @@
 
     <!-- Why Us -->
     <section class="max-w-6xl mx-auto py-16 px-6">
-      <h2 data-aos="fade-right" class="text-4xl font-semibold text-[#940fde] mb-8">
+      <h2
+        data-aos="fade-right"
+        class="text-4xl font-semibold text-[#940fde] mb-8">
         Why Choose Digitrix for Branding?
       </h2>
       <ul class="space-y-5 text-lg text-gray-700">
@@ -250,7 +351,8 @@
     </section>
 
     <!-- Stats -->
-    <section class="bg-gradient-to-r from-[#940fde] to-[#ffc107] text-white py-16 px-6 text-center">
+    <section
+      class="bg-gradient-to-r from-[#940fde] to-[#ffc107] text-white py-16 px-6 text-center">
       <h2 data-aos="fade-up" class="text-3xl font-bold mb-10">
         Branding That Leaves a Mark
       </h2>
@@ -276,13 +378,13 @@
         Ready to Make Your Brand Unforgettable?
       </h2>
       <p data-aos="fade-up" class="text-gray-600 max-w-2xl mx-auto mb-8">
-        Let's work together to build a brand identity that stands out, connects deeply, and grows with your business.
+        Let's work together to build a brand identity that stands out, connects
+        deeply, and grows with your business.
       </p>
       <a
         href="contact.html"
         class="inline-block px-8 py-3 bg-gradient-to-r from-[#940fde] to-[#ffc107] text-white font-semibold rounded-full shadow hover:opacity-90 transition duration-300"
-        data-aos="fade-up"
-      >
+        data-aos="fade-up">
         Start Branding
       </a>
     </section>
@@ -339,7 +441,7 @@
           </div>
         </div>
 
-       <!-- IT Services -->
+        <!-- IT Services -->
         <div>
           <h3 class="text-lg font-semibold mb-4">IT Services</h3>
           <ul class="space-y-2 text-sm text-gray-700">
@@ -419,10 +521,11 @@
       </button>
     </footer>
 
-
-  <script src="https://kit.fontawesome.com/831f7084ef.js" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script src="script.js"></script>
-</body>
+    <script
+      src="https://kit.fontawesome.com/831f7084ef.js"
+      crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
