--- a/marketing.html
+++ b/marketing.html
@@ -13,12 +13,70 @@
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+       #loaderWrapper {
+        position: fixed;
+        inset: 0;
+        background: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+      }
+      .loader {
+        width: 65px;
+        aspect-ratio: 1;
+        position: relative;
+      }
+      .loader:before,
+      .loader:after {
+        content: "";
+        position: absolute;
+        border-radius: 50px;
+        box-shadow: 0 0 0 3px inset #ffc107;
+        animation: l5 2.5s infinite;
+      }
+      .loader:after {
+        animation-delay: -1.25s;
+        border-radius: 0;
+        box-shadow: 0 0 0 3px inset #940fde;
+      }
+      @keyframes l5 {
+        0% {
+          inset: 0 35px 35px 0;
+        }
+        12.5% {
+          inset: 0 35px 0 0;
+        }
+        25% {
+          inset: 35px 35px 0 0;
+        }
+        37.5% {
+          inset: 35px 0 0 0;
+        }
+        50% {
+          inset: 35px 0 0 35px;
+        }
+        62.5% {
+          inset: 0 0 0 35px;
+        }
+        75% {
+          inset: 0 0 35px 35px;
+        }
+        87.5% {
+          inset: 0 0 35px 0;
+        }
+        100% {
+          inset: 0 35px 35px 0;
+        }
+      }
       body {
         font-family: "Livvic", sans-serif;
       }
     </style>
   </head>
   <body class="bg-white text-gray-800">
+    <!-- Loader -->
+    <div id="loaderWrapper"><div class="loader"></div></div>
     <!-- Navbar -->
     <header
       id="navbar"
@@ -335,7 +393,7 @@
       </a>
     </section>
 
-   <footer
+    <footer
       class="relative bg-gradient-to-b from-[#e8f0fc] to-white pt-16 pb-8 px-6 sm:px-12 overflow-hidden">
       <div
         class="absolute inset-0 z-0 bg-no-repeat bg-cover opacity-[0.3] pointer-events-none"
@@ -466,7 +524,6 @@
         <div id="fill" class="absolute inset-0 rounded-full z-0"></div>
       </button>
     </footer>
-
 
     <script
       src="https://kit.fontawesome.com/831f7084ef.js"
