--- a/seo-optimization.html
+++ b/seo-optimization.html
@@ -13,12 +13,70 @@
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+       #loaderWrapper {
+        position: fixed;
+        inset: 0;
+        background: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+      }
+      .loader {
+        width: 65px;
+        aspect-ratio: 1;
+        position: relative;
+      }
+      .loader:before,
+      .loader:after {
+        content: "";
+        position: absolute;
+        border-radius: 50px;
+        box-shadow: 0 0 0 3px inset #ffc107;
+        animation: l5 2.5s infinite;
+      }
+      .loader:after {
+        animation-delay: -1.25s;
+        border-radius: 0;
+        box-shadow: 0 0 0 3px inset #940fde;
+      }
+      @keyframes l5 {
+        0% {
+          inset: 0 35px 35px 0;
+        }
+        12.5% {
+          inset: 0 35px 0 0;
+        }
+        25% {
+          inset: 35px 35px 0 0;
+        }
+        37.5% {
+          inset: 35px 0 0 0;
+        }
+        50% {
+          inset: 35px 0 0 35px;
+        }
+        62.5% {
+          inset: 0 0 0 35px;
+        }
+        75% {
+          inset: 0 0 35px 35px;
+        }
+        87.5% {
+          inset: 0 0 35px 0;
+        }
+        100% {
+          inset: 0 35px 35px 0;
+        }
+      }
       body {
         font-family: "Livvic", sans-serif;
       }
     </style>
   </head>
   <body class="bg-white text-gray-800">
+    <!-- Loader -->
+    <div id="loaderWrapper"><div class="loader"></div></div>
     <!-- Navbar -->
     <header
       id="navbar"
@@ -141,13 +199,14 @@
         Rank Higher, Grow Faster with Proven SEO Strategies
       </h2>
       <p data-aos="fade-up" class="text-lg text-gray-700 mb-10">
-        At <strong class="text-[#ffc107] font-semibold">Digitrix Tech</strong>, we help your
-        business dominate search engine rankings. Whether you’re a startup or an
-        established brand, our SEO strategies drive
-        <strong class="text-[#ffc107]  font-semibold">organic traffic</strong>,
-        <strong class="text-[#ffc107]  font-semibold">increase visibility</strong>, and
-        <strong class="text-[#ffc107]  font-semibold" >boost conversions</strong> across Google,
-        Bing, and beyond.
+        At <strong class="text-[#ffc107] font-semibold">Digitrix Tech</strong>,
+        we help your business dominate search engine rankings. Whether you’re a
+        startup or an established brand, our SEO strategies drive
+        <strong class="text-[#ffc107] font-semibold">organic traffic</strong>,
+        <strong class="text-[#ffc107] font-semibold">increase visibility</strong
+        >, and
+        <strong class="text-[#ffc107] font-semibold">boost conversions</strong>
+        across Google, Bing, and beyond.
       </p>
     </section>
 
@@ -261,7 +320,9 @@
 
     <!-- Benefits -->
     <section class="max-w-6xl mx-auto py-16 px-6">
-      <h2 data-aos="fade-right" class="text-4xl font-semibold text-[#940fde] mb-8">
+      <h2
+        data-aos="fade-right"
+        class="text-4xl font-semibold text-[#940fde] mb-8">
         Why Digitrix SEO Services?
       </h2>
       <ul class="space-y-5 text-lg text-gray-700">
@@ -454,7 +515,6 @@
         <div id="fill" class="absolute inset-0 rounded-full z-0"></div>
       </button>
     </footer>
-
 
     <script
       src="https://kit.fontawesome.com/831f7084ef.js"
